# NOUZEN_Bringup

./: CMakeLists.txt  README.md  package.xml  plugins.xml
bringup/config/: camera_info.yaml  ld19.yaml  nouzen_controllers.yaml  teleop_xbox.yaml
bringup/launch/: nouzen_base.launch.py  robot.launch.py  sensors.launch.py  teleop_xbox.launch.py
bringup/launch/include/: camera.launch.py  ld19.launch.py
description/urdf/: nouzen.urdf.xacro  nouzen_description.xacro  nouzen_materials.xacro  nouzen_ros2_control.xacro
hardware/include/: nouzen_hardware_interface.hpp
hardware/src/: nouzen_hardware_interface.cpp
scripts/: dock_pose_publisher.py
